--- a/tecolotl-web/src/main/webapp/biblioteca-libre/free-library.xhtml
+++ b/tecolotl-web/src/main/webapp/biblioteca-libre/free-library.xhtml
@@ -69,7 +69,7 @@
         <h:outputStylesheet library="css" name="navegacion.css"/>
         <h:outputStylesheet library="css" name="biblioteca.css"/>
 
-        <div class="uk-container  padding-inferior">
+        <div class="uk-container  padding-inferior" data-uk-filter="target: .js-filter">
             <div class="uk-width-1-1@m uk-margin-medium-top">
                 <form id="search-form" action="">
                     <div class="uk-inline uk-width-1-1">
@@ -79,7 +79,7 @@
                     </div>
                 </form>
             </div>
-            <div data-uk-filter="target: .js-filter">
+<!--            <div >-->
                 <ul class="uk-subnav nav-default-profesor uk-subnav-alumno uk-margin-medium-top">
                     <li class="uk-active" data-uk-filter-control=""><a href="#">Show All</a></li>
                     <li data-uk-filter-control=".A1" ><a href="#">Level A1</a></li>
@@ -94,8 +94,8 @@
                 <ul>
                     <h:form styleClass="uk-grid js-filter uk-margin-medium-top uk-margin-large-bottom uk-child-width-1-3@m" pt:uk-grid="">
                         <ui:repeat value="#{bibliotecaLibreControlador.actividadModeloLista}" var="actividadModelo">
-                            <li class="#{actividadModelo.nivelLenguajeModeloLista[0].valor}">
-                                <h:panelGroup layout="block" styleClass="card-actividad #{actividadModelo.nivelLenguajeModeloLista[0].valor}" pt:data-tags="a beautiful landscape - nature outdoor" >
+                            <li class="#{actividadModelo.nivelLenguajeModeloLista[0].valor}" data-tags="#{actividadModelo.preguntaDetonadora}">
+                                <h:panelGroup layout="block" styleClass="card-actividad #{actividadModelo.nivelLenguajeModeloLista[0].valor}"  >
                                     <div class="uk-card uk-card-default uk-card-small uk-card-hover card-border ">
                                         <div class="uk-card-header border-card">
                                             <h:panelGroup layout="block" styleClass="uk-grid uk-grid-small uk-text-small" pt:uk-grid="">
@@ -146,7 +146,7 @@
                         </ui:repeat>
                     </h:form>
                 </ul>
-            </div>
+<!--            </div>-->
         </div>
         <h:outputScript library="js" name="/alumno/biblioteca-alumno.js"/>
     </ui:define>
