--- a/tecolotl-web/src/main/webapp/alumno/biblioteca-libre/free-library.xhtml
+++ b/tecolotl-web/src/main/webapp/alumno/biblioteca-libre/free-library.xhtml
@@ -67,13 +67,13 @@
         <h:outputStylesheet library="css" name="biblioteca.css"/>
 
         <div class="uk-container  padding-inferior" data-uk-filter="target: .js-filter">
-        <div class="uk-container  padding-inferior">
             <div class="uk-width-1-1@m uk-margin-medium-top">
                 <form id="search-form" action="">
                     <div class="uk-inline uk-width-1-1">
                         <span class="uk-form-icon uk-form-icon-flip" data-uk-icon="icon: search"/>
                         <input class="uk-input uk-width-1-1 search-fld" type="text" placeholder="Type your search" autofocus=""/>
-                        <a href="#" class="search-filter" data-uk-filter-control="[data-tags*='']" hidden="">Search</a>
+                        <a href="#" class="search-filter" data-uk-filter-control="[data-tags*='']"  hidden="">Search</a>
+                        <a href="#" class="search-question" data-uk-filter-control="[data-question*='']"  hidden="">Search</a>
                     </div>
                 </form>
             </div>
@@ -92,16 +92,18 @@
                 <ul>
                     <h:form styleClass="uk-grid js-filter uk-margin-medium-top uk-margin-large-bottom uk-child-width-1-3@m" pt:uk-grid="">
                         <ui:repeat value="#{bibliotecaLibreControlador.actividadModeloLista}" var="actividadModelo">
-                            <li class="#{actividadModelo.nivelLenguajeModeloLista[0].valor}" data-tags="#{actividadModelo.preguntaDetonadora}">
+                            <li class="#{actividadModelo.nivelLenguajeModeloLista[0].valor}" data-tags="#{actividadModelo.temaModelo.valor}" data-question="#{actividadModelo.preguntaDetonadora}">
                                 <h:panelGroup layout="block" styleClass="card-actividad #{actividadModelo.nivelLenguajeModeloLista[0].valor}"  >
                                     <div class="uk-card uk-card-default uk-card-small uk-card-hover card-border ">
                                         <div class="uk-card-header border-card">
                                             <h:panelGroup layout="block" styleClass="uk-grid uk-grid-small uk-text-small" pt:uk-grid="">
                                                 <div class="uk-width-expand">
                                                     <h:graphicImage styleClass="uk-border-circle" library="img" name="mounstro/3ojos.svg" width="30" height="30" />
+
                                                     <ui:repeat value="#{actividadModelo.nivelLenguajeModeloLista}" var="lenguaje">
                                                         <span class="cat-txt">#{lenguaje.valor}</span>
                                                     </ui:repeat>
+                                                    #{actividadModelo.temaModelo.valor}
                                                 </div>
                                                 <div class="uk-width-auto uk-text-right uk-text-muted">
                                                     <h:outputText styleClass="uk-margin-small-right" pt:uk-icon="icon:clock"/>#{actividadModelo.tiempo}
