estilo al boton siguiente

--- a/tecolotl-web/src/main/webapp/alumno/biblioteca-libre/activity-free-library.xhtml
+++ b/tecolotl-web/src/main/webapp/alumno/biblioteca-libre/activity-free-library.xhtml
@@ -66,7 +66,7 @@
     <ui:define name="contenido">
         #{actividadBibliotecaLibre.actividadModelo.idVideo}
         #{actividadBibliotecaLibre.actividadModelo.transcripcion}
-        <h:button value="#{boton['next']}" outcome="siguiente"/>
+        <h:button value="#{boton['next']}" styleClass="boton-enviar boton-trasladar" outcome="siguiente"/>
     </ui:define>
 </ui:composition>
 </html>
