Ahora la transcricion de biblioteca libre viene desde sesion bean

--- a/tecolotl-web/src/main/webapp/alumno/biblioteca-libre/activity-free-library.xhtml
+++ b/tecolotl-web/src/main/webapp/alumno/biblioteca-libre/activity-free-library.xhtml
@@ -64,8 +64,8 @@
         </div>
     </ui:define>
     <ui:define name="contenido">
-        #{actividadBibliotecaLibre.actividadModelo.idVideo}
-        #{actividadBibliotecaLibre.actividadModelo.transcripcion}
+        #{alumnoControlador.actividadModeloBibliotecaLibre.idVideo}
+        #{actividadBibliotecaLibre.transcripcion}
         <h:button value="#{boton['next']}" styleClass="boton-enviar boton-trasladar" outcome="siguiente"/>
     </ui:define>
 </ui:composition>
