--- a/tecolotl-web/src/main/webapp/alumno/biblioteca-libre/free-library.xhtml
+++ b/tecolotl-web/src/main/webapp/alumno/biblioteca-libre/free-library.xhtml
@@ -67,7 +67,6 @@
         <h:outputStylesheet library="css" name="biblioteca.css"/>
 
         <div class="uk-container  padding-inferior" data-uk-filter="target: .js-filter">
-        <div class="uk-container  padding-inferior">
             <div class="uk-width-1-1@m uk-margin-medium-top">
                 <form id="search-form" action="">
                     <div class="uk-inline uk-width-1-1">
@@ -92,8 +91,8 @@
                 <ul>
                     <h:form styleClass="uk-grid js-filter uk-margin-medium-top uk-margin-large-bottom uk-child-width-1-3@m" pt:uk-grid="">
                         <ui:repeat value="#{bibliotecaLibreControlador.actividadModeloLista}" var="actividadModelo">
-                            <li class="#{actividadModelo.nivelLenguajeModeloLista[0].valor}" data-tags="#{actividadModelo.preguntaDetonadora}">
-                                <h:panelGroup layout="block" styleClass="card-actividad #{actividadModelo.nivelLenguajeModeloLista[0].valor}"  >
+                            <li class="#{actividadModelo.nivelLenguajeModeloLista[0].valor}#{actividadModelo.nivelLenguajeModeloLista[1].valor}" data-tags="#{actividadModelo.temaModelo.valor.toLowerCase()} #{actividadModelo.preguntaDetonadora.toLowerCase()}">
+                                <h:panelGroup layout="block" styleClass="card-actividad #{actividadModelo.nivelLenguajeModeloLista[0].valor}#{actividadModelo.nivelLenguajeModeloLista[1].valor}"  >
                                     <div class="uk-card uk-card-default uk-card-small uk-card-hover card-border ">
                                         <div class="uk-card-header border-card">
                                             <h:panelGroup layout="block" styleClass="uk-grid uk-grid-small uk-text-small" pt:uk-grid="">
