--- a/tecolotl-web/src/main/webapp/alumno/biblioteca-libre/activity-free-library.xhtml
+++ b/tecolotl-web/src/main/webapp/alumno/biblioteca-libre/activity-free-library.xhtml
@@ -64,9 +64,61 @@
         </div>
     </ui:define>
     <ui:define name="contenido">
-        #{alumnoControlador.actividadModeloBibliotecaLibre.idVideo}
-        #{actividadBibliotecaLibre.transcripcion}
-        <h:button value="#{boton['next']}" styleClass="boton-enviar boton-trasladar" outcome="siguiente"/>
+        <h:outputStylesheet library="css" name="alumno/transcript/transcript.css"/>
+        <div class="uk-section" style="box-sizing: border-box">
+            <div class="uk-container padding-contenedor">
+                    <h:panelGroup layout="block" styleClass="uk-grid" pt:uk-grid="">
+                        <div class="uk-width-1-2@m tam-contenido uk-padding-remove-left">
+                            <div data-video="#{alumnoControlador.actividadModeloBibliotecaLibre.idVideo}" class="scrollFinal"></div>
+                        </div>
+                        <div id="scrollTranscript" class="uk-width-1-2@m uk-text-justify transcrip-contenedor tam-contenido scroll-alumno letra-guion borde-guion transcripcion">
+                            <h:outputText value="#{actividadBibliotecaLibre.transcripcion}" escape="false"/>
+                        </div>
+                    </h:panelGroup>
+                    <h:button value="#{boton['next']}" styleClass="boton-enviar boton-trasladar" outcome="siguiente"/>
+            </div>
+        </div>
+        <script type="application/javascript">
+            var videoPlayer = document.querySelectorAll('.scrollFinal');
+            var player;
+            var totalRespuestasTranscripcion = 0;
+            var ordenarPalabras = document.querySelector('.order-words');
+
+            function onYouTubeIframeAPIReady() {
+                videoPlayer.forEach(function (video) {
+                    console.log(video.dataset.video);
+                    player = new YT.Player( video, {
+                        height: '100%',
+                        width: '100%',
+                        videoId: video.dataset.video,
+                        events: {
+                            'onReady': onPlayerReady,
+                            'onStateChange': onPlayerStateChange
+                        }
+                    });
+                });
+            }
+
+            function onPlayerReady(event) {
+                console.log(event, 'Evento Listo!!');
+            }
+
+            var done = false;
+            function onPlayerStateChange(event) {
+                if (event.data === YT.PlayerState.PLAYING &amp;&amp; !done) {
+                    console.log('Ocurrio el evento! ');
+                    pageScroll();
+                    done = true;
+                }else {
+                    done = false;
+                }
+            }
+            function pageScroll() {
+                var objDiv = document.getElementById('scrollTranscript');
+                objDiv.scrollTop = objDiv.scrollTop + 1;
+                time = setTimeout('pageScroll()', 500);
+            }
+        </script>
     </ui:define>
 </ui:composition>
 </html>
