Relacionar imagen con palabra listo el flujo

--- a/tecolotl-web/src/main/webapp/alumno/biblioteca-libre/order-free-library.xhtml
+++ b/tecolotl-web/src/main/webapp/alumno/biblioteca-libre/order-free-library.xhtml
@@ -69,8 +69,8 @@
                 #{gramaticaModelo.palabra}
             </ui:repeat>
         </ui:fragment>
+        <h:button outcome="atras" value="#{boton['back']}"/>
+        <h:button outcome="siguiente" value="#{boton['next']}"/>
     </ui:define>
-    <h:button outcome="atras" value="#{buton['back']}"/>
-    <h:button outcome="siguiente" value="#{boton['next']}"/>
 </ui:composition>
 </html>
