--- a/tecolotl-web/src/main/webapp/alumno/biblioteca-libre/order-free-library.xhtml
+++ b/tecolotl-web/src/main/webapp/alumno/biblioteca-libre/order-free-library.xhtml
@@ -61,6 +61,7 @@
         </div>
     </ui:define>
     <ui:define name="contenido">
+        <h:outputStylesheet library="css" name="/alumno/transcript/ordenar-palabra.css"/>
         <h:outputStylesheet library="css" name="letra.css"/>
         <div class="uk-section" style="box-sizing: border-box">
              <div class="uk-container padding-contenedor">
