vista ordenas palabras y vista relacionar imagen-palabra free library

--- a/tecolotl-web/src/main/webapp/alumno/biblioteca-libre/match-free-library.xhtml
+++ b/tecolotl-web/src/main/webapp/alumno/biblioteca-libre/match-free-library.xhtml
@@ -126,6 +126,8 @@
             </div>
         </div>
 <!--        javascript-->
+        <h:outputScript library="js" name="/alumno/drag-drop.js"/>
+        <h:outputScript library="js" name="/alumno/match-free-library.js"/>
     </ui:define>
 </ui:composition>
 </html>
