--- a/tecolotl-web/src/main/webapp/alumno/biblioteca-libre/order-free-library.xhtml
+++ b/tecolotl-web/src/main/webapp/alumno/biblioteca-libre/order-free-library.xhtml
@@ -71,6 +71,9 @@
                      <div uk-dropdown="mode: click">Make sentences  using can and  the words provided</div>
                  </div>
                  <h1 class="uk-text-center lescuadron" style="color: white"> #{alumno['activities.word.order.instruction.title']}</h1>
+                 <span>
+                    <h:outputText value="no hay tarea" rendered="#{empty gramaticaBibliotecaLibreControlador.gramaticaModeloLista}"/>
+                 </span>
                  <div class="imagen-ordenar">
                      <h:graphicImage library="img" name="mounstro/whom.svg"/>
                  </div>
