vista ordenas palabras y vista relacionar imagen-palabra free library

--- a/tecolotl-web/src/main/webapp/alumno/biblioteca-libre/activity-free-library.xhtml
+++ b/tecolotl-web/src/main/webapp/alumno/biblioteca-libre/activity-free-library.xhtml
@@ -85,7 +85,11 @@
                         <h:outputText value="#{actividadBibliotecaLibre.transcripcion}" escape="false" />
                     </div>
                 </h:panelGroup>
-                    <h:button value="#{boton['next']}" styleClass="boton-enviar boton-trasladar" outcome="siguiente"/>
+                    <div class="uk-flex uk-flex-center uk-margin-large-bottom">
+                        <button  class="boton-enviar ">SCORE</button>
+                    </div>
+                <h:button value="#{boton['next']}" styleClass="boton-enviar " outcome="siguiente"/>
+
             </div>
         </div>
         <script type="application/javascript">
